[O] Vector2Int and Vector3Int optimized for usage in containers [U] ChunkStorage now uses Vector3Int as keys

--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -10,6 +10,10 @@
             <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Cleaning_InsertBlankLinePaddingBeforeEndRegionTags"
+                serializeAs="String">
+                <value>False</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
