[U] First step towards chunk manager (chunks will turn from god object to objects knowing nothing about the world at all)

--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -12,6 +12,46 @@
             </setting>
             <setting name="Cleaning_InsertBlankLinePaddingBeforeEndRegionTags"
                 serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Cleaning_UpdateEndRegionDirectives" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeConstructors" serializeAs="String">
+                <value>Constructors||10||Constructors</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeMethods" serializeAs="String">
+                <value>Methods||12||Methods</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeProperties" serializeAs="String">
+                <value>Properties||1||Properties</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeEnums" serializeAs="String">
+                <value>Enums||4||Enums</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeDestructors" serializeAs="String">
+                <value>Destructors||11||Destructors</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeDelegates" serializeAs="String">
+                <value>Delegates||5||Delegates</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeClasses" serializeAs="String">
+                <value>Classes||8||Classes</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeFields" serializeAs="String">
+                <value>Fields||2||Fields</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeStructs" serializeAs="String">
+                <value>Structs||7||Structs</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeInterfaces" serializeAs="String">
+                <value>Interfaces||6||Interfaces</value>
+            </setting>
+            <setting name="Reorganizing_MemberTypeEvents" serializeAs="String">
+                <value>Events||3||Events</value>
+            </setting>
+            <setting name="Reorganizing_AlphabetizeMembersOfTheSameGroup"
+                serializeAs="String">
                 <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
